@@ -8,6 +8,7 @@ import com.intellij.execution.configurations.ParametersList
 import com.intellij.execution.configurations.RunConfiguration
 import com.intellij.execution.configurations.RunConfigurationBase
 import com.intellij.execution.configurations.RunnerSettings
+import com.intellij.execution.jar.JarApplicationConfiguration
 import com.intellij.openapi.components.service
 import com.intellij.openapi.diagnostic.Logger
 import com.intellij.openapi.module.Module
@@ -62,6 +63,21 @@ class AutoOtelAgentRunConfigurationWrapper : RunConfigurationWrapper {
         val isMicronautModule = evalIsMicronautModule(resolvedModule)
         val useAgent = !(isMicronautModule || isSpringBootWithMicrometerTracing)
         when (val runConfigType = evalRunConfigType(configuration)) {
+            RunConfigType.Jar -> {
+                val javaToolOptions =
+                    buildJavaToolOptions(
+                        configuration,
+                        params,
+                        useAgent,
+                        isSpringBootWithMicrometerTracing,
+                        isOtelServiceNameAlreadyDefined(params),
+                        runConfigType.isTest
+                    )
+                javaToolOptions?.let {
+                    mergeJavaToolOptions(project, params, it)
+                }
+            }
+
             RunConfigType.JavaTest,
             RunConfigType.KotlinRun,
             RunConfigType.JavaRun,
@@ -72,6 +88,7 @@ class AutoOtelAgentRunConfigurationWrapper : RunConfigurationWrapper {
                 val javaToolOptions =
                     buildJavaToolOptions(
                         configuration,
+                        params,
                         useAgent,
                         isSpringBootWithMicrometerTracing,
                         isOtelServiceNameAlreadyDefined(params),
@@ -99,6 +116,7 @@ class AutoOtelAgentRunConfigurationWrapper : RunConfigurationWrapper {
                 val javaToolOptions =
                     buildJavaToolOptions(
                         configuration,
+                        params,
                         useAgent,
                         isSpringBootWithMicrometerTracing,
                         isOtelServiceNameAlreadyDefined(configuration),
@@ -116,6 +134,7 @@ class AutoOtelAgentRunConfigurationWrapper : RunConfigurationWrapper {
                 val javaToolOptions =
                     buildJavaToolOptions(
                         configuration,
+                        params,
                         useAgent,
                         isSpringBootWithMicrometerTracing,
                         isOtelServiceNameAlreadyDefined(params),
@@ -168,6 +187,7 @@ class AutoOtelAgentRunConfigurationWrapper : RunConfigurationWrapper {
 
     private fun buildJavaToolOptions(
         configuration: RunConfigurationBase<*>,
+        params: JavaParameters?,
         useAgent: Boolean,
         isSpringBootWithMicrometerTracing: Boolean,
         serviceAlreadyDefined: Boolean,
@@ -188,7 +208,7 @@ class AutoOtelAgentRunConfigurationWrapper : RunConfigurationWrapper {
             digmaExtensionPath = FileUtils.convertWinToWslPath(digmaExtensionPath)
         }
 
-        var retVal = " "
+        var retVal = "-Xverify:none "
         if (isSpringBootWithMicrometerTracing) {
             retVal = retVal
                 .plus("-Dmanagement.otlp.tracing.endpoint=${getExporterUrl()}")
@@ -208,10 +228,12 @@ class AutoOtelAgentRunConfigurationWrapper : RunConfigurationWrapper {
         }
 
         if (isTest) {
-            val envPart = "digma.environment=${Env.buildEnvForLocalTests()}"
-            retVal = retVal
-                .plus("-Dotel.resource.attributes=\"$envPart\"")
-                .plus(" ")
+            if (!alreadyHasTestEnv(configuration, params)) {
+                val envPart = "digma.environment=${Env.buildEnvForLocalTests()}"
+                retVal = retVal
+                    .plus("-Dotel.resource.attributes=\"$envPart\"")
+                    .plus(" ")
+            }
 
             val hasMockito = true //currently do not check for mockito since flag is minor and won't affect other cases
             if (hasMockito) {
@@ -234,6 +256,20 @@ class AutoOtelAgentRunConfigurationWrapper : RunConfigurationWrapper {
 
         return retVal
     }
+
+    private fun alreadyHasTestEnv(configuration: RunConfiguration, params: JavaParameters?): Boolean {
+
+        if (isGradleTestConfiguration(configuration) &&
+            alreadyHasDigmaEnvironmentInResourceAttributeInGradleConfig(configuration as GradleRunConfiguration)
+        ) {
+            return true
+        }
+
+        return params?.let {
+            alreadyHasDigmaEnvironmentInResourceAttribute(params)
+        } ?: false
+    }
+
 
     private fun isOtelEntryDefined(
         javaConfParams: JavaParameters,
@@ -286,10 +322,11 @@ class AutoOtelAgentRunConfigurationWrapper : RunConfigurationWrapper {
         if (isJavaConfiguration(configuration)) return RunConfigType.JavaRun
         if (isKotlinConfiguration(configuration)) return RunConfigType.KotlinRun
         if (isJavaTestConfiguration(configuration)) return RunConfigType.JavaTest
-        if (isGradleConfiguration(configuration)) return RunConfigType.GradleRun
         if (isGradleTestConfiguration(configuration)) return RunConfigType.GradleTest
+        if (isGradleConfiguration(configuration)) return RunConfigType.GradleRun
         if (isMavenConfiguration(configuration)) return RunConfigType.MavenRun
         if (isMavenTestConfiguration(configuration)) return RunConfigType.MavenTest
+        if (isJarConfiguration(configuration)) return RunConfigType.Jar
         return RunConfigType.Unknown
     }
 
@@ -343,6 +380,7 @@ class AutoOtelAgentRunConfigurationWrapper : RunConfigurationWrapper {
             }
 
             // check for standard OpenTelemetry environment variables based on common prefix OTEL_
+            //todo: why that means its gradle ?
             val hasOtelDefined = configuration.settings.env.keys.any {
                 it.startsWith("OTEL_")
             }
@@ -421,6 +459,10 @@ class AutoOtelAgentRunConfigurationWrapper : RunConfigurationWrapper {
             return hasTestTask
         }
         return false
+    }
+
+    private fun isJarConfiguration(configuration: RunConfiguration): Boolean {
+        return configuration is JarApplicationConfiguration
     }
 
 }
